@@ -1,3 +1,6 @@
+Jul 24, 2024
+  draft version of SSSOM file generator -- currently for EFO to CMO
+
 Jul 16, 2024
   CL ontology: updated to release v2024-07-10
 
